student details form's spacing and validation issues fixed

--- a/src/components/Forms/StudentDetailForms/FormFour/FormFour.module.scss
+++ b/src/components/Forms/StudentDetailForms/FormFour/FormFour.module.scss
@@ -3,6 +3,10 @@
   max-width: 700px;
   padding: 1.5rem 0;
 
+  .resume_link {
+    width: 100%;
+  }
+
   .btn {
     width: 100%;
   }
