--- a/src/components/Forms/StudentDetailForms/FormTwo/FormTwo.module.scss
+++ b/src/components/Forms/StudentDetailForms/FormTwo/FormTwo.module.scss
@@ -27,7 +27,11 @@
     display: flex;
     flex-direction: row;
     gap: 10px;
-    padding: 10px 1rem 0 1rem;
+    padding-top: 1rem;
     width: 100%;
+
+    @media screen and (max-width: 525px) {
+      padding: 1rem 0;
+    }
   }
 }
